--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
                     <div class="note-title">公告 / Announcement</div>
                 </div>
                 <div class="board-content">
-                    <p>写这个blog已经写得人精神状态濒临崩溃了<img src="./m/bocchi seizures.GIF" alt="抽搐.wedp"></p>
+                    <p>写这个blog已经写得人精神状态濒临崩溃了<img src="./m/bocchi seizures.GIF" alt="抽搐.jpg"></p>
                     <p>其实本来有很多<span class="cross">伟大</span>的设想但都没有来得及做，也有很多有趣的东西没来得及放上去，还有一些很明显的bug。目前先用github静态部署，之后可能会考虑搞个服务器，但也算是在自己设的ddl（2026.1.1）前完成了。</p>
                     <p>在此特别鸣谢我的四位非人类老师（）能遇见你们真好</p>
                     <p>会努力更新的，所以，欢迎常来看看。忘了在哪看到过一句话：</p>
