--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <!-- 导航栏 -->
     <ul class="nav">
         <li><a href="#" id="firstVisit" class="title">初次来访？</a></li>
-        <li><a href="imdex.html" class="title">首页</a>
+        <li><a href="index.html" class="title">首页</a>
         <li><a href="essay.html" class="title">随笔</a>
             <!-- <ul class="dropdown">
                 <li><a href="#">觅食报告</a></li>
