src collection.html

--- a/src collection.html
+++ b/src collection.html
@@ -120,42 +120,42 @@
             <div class="note-content">
                 <div class="src">
                     <h3 id="sites">有趣网站</h3>
-                    <a href="https://www.personality-database.com/">personality-database</a>
-                    <a href="https://lab.magiconch.com/">神奇海螺试验场（某大佬的个人网站）</a>
-                    <a href="https://xingye.me/game/index.php">星夜的games（又是一位佬的个人blog））</a>
-                    <a href="https://cook.yunyoujun.cn/">做饭灵感</a>
-                    <a href="https://archive.org/">Internet Archive</a>
-                    <a href="https://bezier.method.ac/">练习贝塞尔曲线的绘制</a>
+                    <a href="https://www.personality-database.com/" target="_blank">personality-database</a>
+                    <a href="https://lab.magiconch.com/" target="_blank">神奇海螺试验场（某大佬的个人网站）</a>
+                    <a href="https://xingye.me/game/index.php" target="_blank">星夜的games（又是一位佬的个人blog））</a>
+                    <a href="https://cook.yunyoujun.cn/" target="_blank">做饭灵感</a>
+                    <a href="https://archive.org/" target="_blank">Internet Archive</a>
+                    <a href="https://bezier.method.ac/" target="_blank">练习贝塞尔曲线的绘制</a>
                     <h3 id="tools">工具</h3>   
-                    <a href="https://cnvmp3.com/v51">Youtube视频下载器</a>
-                    <a href="https://convertio.co/">convertio文件转换器</a>
-                    <a href="https://snapany.com/zh/bilibili">bilibili视频下载</a>
-                    <a href="https://awesomevideoeditor.com/">加字幕</a>
-                    <a href="https://imgse.com/">图床（并非好用）</a>
-                    <a href="https://p.sda1.dev/">也是图床</a>
-                    <a href="https://catbox.moe/">catbox图床</a>
-                    <a href="https://www.oxfordlearnersdictionaries.com/">牛津词典</a>    
-                    <a href="https://rdfz.jyyun.com/">rdfz校园网(别科学上网)</a>
-                    <a href="https://greasyfork.org/">Greasyfork</a>
-                    <a href="https://rsshub.netlify.app/">rsshub</a>
-                    <a href="https://sms-activate.org/">境外验证码激活</a>
-                    <a href="https://www.meiguodizhi.com/">境外地址生成器</a>
-                    <a href="https://recordscreen.io/">录屏</a>
-                    <a href="https://www.tampermonkey.net/">Tampermonkey</a>
-                    <a href="https://uiverse.io/">开源ui</a>
-                    <a href="https://greasyfork.org/zh-CN/scripts/25718-%E8%A7%A3%E9%99%A4b%E7%AB%99%E5%8C%BA%E5%9F%9F%E9%99%90%E5%88%B6">解除B站区域限制</a>
-                    <a href="https://greasyfork.org/zh-CN/scripts/381682-%E9%9F%B3%E8%A7%86%E9%A2%91%E5%A2%9E%E5%BC%BA%E8%84%9A%E6%9C%AC-%E6%97%A0%E6%9E%81%E8%B0%83%E9%80%9F-%E5%80%8D%E9%80%9F%E5%BF%AB%E5%AD%A6-%E5%BF%AB%E4%B9%90%E5%88%B7%E5%89%A7-%E8%A7%86%E9%A2%91%E4%B8%8B%E8%BD%BD-%E7%94%BB%E9%9D%A2%E6%88%AA%E5%9B%BE%E7%AD%89-%E9%80%82%E7%94%A8%E5%A4%A7%E9%83%A8%E5%88%86%E7%BD%91%E7%AB%99">HTML5视频播放器增强脚本</a>
+                    <a href="https://cnvmp3.com/v51" target="_blank">Youtube视频下载器</a>
+                    <a href="https://convertio.co/" target="_blank">convertio文件转换器</a>
+                    <a href="https://snapany.com/zh/bilibili" target="_blank">bilibili视频下载</a>
+                    <a href="https://awesomevideoeditor.com/" target="_blank">加字幕</a>
+                    <a href="https://imgse.com/" target="_blank">图床（并非好用）</a>
+                    <a href="https://p.sda1.dev/" target="_blank">也是图床</a>
+                    <a href="https://catbox.moe/" target="_blank">catbox图床</a>
+                    <a href="https://www.oxfordlearnersdictionaries.com/" target="_blank">牛津词典</a>    
+                    <a href="https://rdfz.jyyun.com/" target="_blank">rdfz校园网(别科学上网)</a>
+                    <a href="https://greasyfork.org/" target="_blank">Greasyfork</a>
+                    <a href="https://rsshub.netlify.app/" target="_blank">rsshub</a>
+                    <a href="https://sms-activate.org/" target="_blank">境外验证码激活</a>
+                    <a href="https://www.meiguodizhi.com/" target="_blank">境外地址生成器</a>
+                    <a href="https://recordscreen.io/" target="_blank">录屏</a>
+                    <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a>
+                    <a href="https://uiverse.io/" target="_blank">开源ui</a>
+                    <a href="https://greasyfork.org/zh-CN/scripts/25718-%E8%A7%A3%E9%99%A4b%E7%AB%99%E5%8C%BA%E5%9F%9F%E9%99%90%E5%88%B6" target="_blank">解除B站区域限制</a>
+                    <a href="https://greasyfork.org/zh-CN/scripts/381682-%E9%9F%B3%E8%A7%86%E9%A2%91%E5%A2%9E%E5%BC%BA%E8%84%9A%E6%9C%AC-%E6%97%A0%E6%9E%81%E8%B0%83%E9%80%9F-%E5%80%8D%E9%80%9F%E5%BF%AB%E5%AD%A6-%E5%BF%AB%E4%B9%90%E5%88%B7%E5%89%A7-%E8%A7%86%E9%A2%91%E4%B8%8B%E8%BD%BD-%E7%94%BB%E9%9D%A2%E6%88%AA%E5%9B%BE%E7%AD%89-%E9%80%82%E7%94%A8%E5%A4%A7%E9%83%A8%E5%88%86%E7%BD%91%E7%AB%99" target="_blank">HTML5视频播放器增强脚本</a>
                     <a href="https://docs.google.com/spreadsheets/d/1nbh_jvnh2FI6zKETbUqW97wOx0Qrlf0l0S-x2daKM9M/edit?pli=1&gid=0#gid=0">图床测评 - Google 表格</a>
-                    <a href="https://immersivetranslate.com/zh-Hans/">沉浸式翻译</a>
-                    <a href="https://scholar.google.com/">谷歌学术搜索</a>
-                    <a href="https://www.runoob.com/">菜鸟教程</a>
+                    <a href="https://immersivetranslate.com/zh-Hans/" target="_blank">沉浸式翻译</a>
+                    <a href="https://scholar.google.com/" target="_blank">谷歌学术搜索</a>
+                    <a href="https://www.runoob.com/" target="_blank">菜鸟教程</a>
                     <h3 id="database">资料库</h3>
-                    <a href="https://helpx.adobe.com/cn/after-effects/using/keyboard-shortcuts-reference.html">After Effects 中的键盘快捷键</a>
-                    <a href="https://helpx.adobe.com/cn/after-effects/using/expression-examples.html">After Effects 中的表达式示例</a>
-                    <a href="https://helpx.adobe.com/cn/premiere/desktop/get-started/keyboard-shortcuts/default-keyboard-shortcuts.html">Premiere Pro 的键盘快捷键</a>
-                    <a href="https://www.pinterest.com/">Pinterest</a>
-                    <a href="https://www.lookae.com/">剪辑素材</a>
-                    <a href="https://www.pexels.com/">免费图片素材</a>
+                    <a href="https://helpx.adobe.com/cn/after-effects/using/keyboard-shortcuts-reference.html" target="_blank">After Effects 中的键盘快捷键</a>
+                    <a href="https://helpx.adobe.com/cn/after-effects/using/expression-examples.html" target="_blank">After Effects 中的表达式示例</a>
+                    <a href="https://helpx.adobe.com/cn/premiere/desktop/get-started/keyboard-shortcuts/default-keyboard-shortcuts.html" target="_blank">Premiere Pro 的键盘快捷键</a>
+                    <a href="https://www.pinterest.com/" target="_blank">Pinterest</a>
+                    <a href="https://www.lookae.com/" target="_blank">剪辑素材</a>
+                    <a href="https://www.pexels.com/" target="_blank">免费图片素材</a>
                     <a href=""></a>
                     <a href=""></a>
                     <a href=""></a>
@@ -172,36 +172,36 @@
                     <a href=""></a>
                     <a href=""></a>
                     <h3 id="forums">论坛</h3>
-                    <a href="https://www.fandom.com">fandom</a>
-                    <a href="https://blogclan.katecary.co.uk/">blogclan</a>
+                    <a href="https://www.fandom.com" target="_blank">fandom</a>
+                    <a href="https://blogclan.katecary.co.uk/" target="_blank">blogclan</a>
                     <a href=""></a>
                     <h2 id="acgn">二次元</h2>
                     <h3>下载</h3>
-                    <a href="https://mikanani.me/">蜜柑</a>
-                    <a href="https://nyaa.si/">Nyaa</a>
-                    <a href="https://vcb-s.com/">VCB-Studio</a>
-                    <a href="https://www.comicplan.top/post/comic-4">本地漫画阅读器</a>
+                    <a href="https://mikanani.me/" target="_blank">蜜柑</a>
+                    <a href="https://nyaa.si/" target="_blank">Nyaa</a>
+                    <a href="https://vcb-s.com/" target="_blank">VCB-Studio</a>
+                    <a href="https://www.comicplan.top/post/comic-4" target="_blank">本地漫画阅读器</a>
                     <h3>在线</h3>
-                    <a href="https://masiro.me/">真百萌</a>
-                    <a href="https://ani.gamer.com.tw/">巴哈姆特</a>
-                    <a href="https://www.bilinovel.com/">bili轻小说</a>
-                    <a href="https://hanime1.me/">hanime1</a>
-                    <a href="https://anime1.me/">Anime1.me</a>
+                    <a href="https://masiro.me/" target="_blank">真百萌</a>
+                    <a href="https://ani.gamer.com.tw/" target="_blank">巴哈姆特</a>
+                    <a href="https://www.bilinovel.com/" target="_blank">bili轻小说</a>
+                    <a href="https://hanime1.me/" target="_blank">hanime1</a>
+                    <a href="https://anime1.me/" target="_blank">Anime1.me</a>
                     
                     <h3>其他</h3>
-                    <a href="https://yuc.wiki/">有c的wiki</a>
-                    <a href="https://sakugabooru.com/">sakugabooru</a>
+                    <a href="https://yuc.wiki/" target="_blank">有c的wiki</a>
+                    <a href="https://sakugabooru.com/" target="_blank">sakugabooru</a>
                     <a href=""></a>
                     <a href=""></a>
                     <h3>有趣网站</h3>
-                    <a href="https://anime-character-guessr.netlify.app/singleplayer">二次元猜角色</a>
-                    <a href="https://bgm.tv/magi">MAGI问答</a>
+                    <a href="https://anime-character-guessr.netlify.app/singleplayer" target="_blank">二次元猜角色</a>
+                    <a href="https://bgm.tv/magi" target="_blank">MAGI问答</a>
                     <a href=""></a>
                     <a href=""></a>
                     <h3>论坛</h3>
-                    <a href="https://bbs.yamibo.com/">百合会</a>
-                    <a href="https://bgm.tv/">bangumi</a>
-                    <a href="https://nga.cn/">nga</a>
+                    <a href="https://bbs.yamibo.com/" target="_blank">百合会</a>
+                    <a href="https://bgm.tv/" target="_blank">bangumi</a>
+                    <a href="https://nga.cn/" target="_blank">nga</a>
                 </div>
             </div> 
         </div>
