--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
     <p class="nar">你好～这里是Dream的个人网站<br>本站含有大量碎碎念和少量彩蛋<br>希望这堆杂七杂八的网页能给你提供一点有趣的东西<br>如果不能的话就把它当成一个人类观察样本吧</p>
 
     <!-- 近期更新 -->
-    <ul class="update">近期更新
-            <li><a href="recomendations.html">青色狂想曲</a>&nbsp;&nbsp;&nbsp;<span class="small">更新时间：2025.12.11</span></li>
-            <li><a href="citybike.html">2025.12.8</a>&nbsp;&nbsp;&nbsp;<span class="small">更新时间：2025.12.9</span></li>
-            <li><a href="book.html">地下室手记</a>&nbsp;&nbsp;&nbsp;<span class="small">更新时间：2025.11.19</span></li>
+    <ul class="update">近期更新(updating...)
     </ul>
 
     <!-- 神奇按钮 -->
