index.html recomendations.html src collection.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,32 @@
     <p class="nar">你好～这里是Dream的个人网站<br>本站含有大量碎碎念和少量彩蛋<br>希望这堆杂七杂八的网页能给你提供一点有趣的东西<br>如果不能的话就把它当成一个人类观察样本吧</p>
 
     <!-- 近期更新 -->
-    <ul class="update">近期更新(updating...)
+    <ul class="update">近期更新
+        <div class="right-bar-1">
+            <span class="bar-title-right">近期更新</span>
+            <ul>
+                <li>
+                    <a href="essay.html#note-7">好用的ae插件</a>
+                    <span class="small">2026.1.7</span>
+                </li>
+                <li>
+                    <a href="recomendations.html#index-1">2025年值得一看的TV新作</a>
+                    <span class="small">2025.12.31</span>
+                </li>
+                <li>
+                    <a href="gallery.html#memes">相册 > 无意义memes</a>
+                    <span class="small">2025.12.25</span>
+                </li>
+                <li>
+                    <a href="essay.html#note-6">个人2025年度原画师</a>
+                    <span class="small">2025.12.21</span>
+                </li>
+                <li>
+                    <a href="essay.html#note-5">Some Interpretions on The Catcher in the Rye</a>
+                    <span class="small">2025.12.16</span>
+                </li>
+            </ul>
+        </div>
     </ul>
 
     <!-- 神奇按钮 -->
