--- a/recomendations.html
+++ b/recomendations.html
@@ -347,6 +347,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-7">好用的ae插件</a>
+                    <span class="small">2026.1.7</span>
+                </li>
+                <li>
                     <a href="recomendations.html#index-1">2025年值得一看的TV新作</a>
                     <span class="small">2025.12.31</span>
                 </li>
@@ -362,13 +366,9 @@
                     <a href="essay.html#note-5">Some Interpretions on The Catcher in the Rye</a>
                     <span class="small">2025.12.16</span>
                 </li>
-                <li>
-                    <a href="recomendations.html#inde-2">青春狂想曲</a>
-                    <span class="small">2025.12.11</span>
-                </li>
             </ul>
         </div>
-
+        
         <!-- 搜索 -->
         <div class="right-bar-2">
             <div class="dir-search-container">
