--- a/essay.html
+++ b/essay.html
@@ -146,9 +146,9 @@
                         <span class="date-icon"></span>
                         <span>2026年1月7日</span>
                     </div>
-                    <div class="note-mood">心情</div>
+                    <div class="note-mood"></div>
                     <div class="note-tags">
-                        <a href="#" class="note-tag">好物分享（？）</a>
+                        <a href="#" class="note-tag">分享</a>
                         <a href="#" class="note-tag">剪辑</a>
                         <a href="#" class="note-tag">插件</a>
                     </div>
@@ -162,8 +162,8 @@
             <p>下次有时间吐槽一下bcc和particular这两个天天把我ae搞崩的罪魁祸首。</p>
             </div> 
             <div class="note-photo-container">
-                <img src="https://files.catbox.moe/6gb6c8.png">
                 <img src="https://files.catbox.moe/5cbxdk.png">
+                <img src="https://files.catbox.moe/6gb6c8.png">
             </div>
         </div>
 
