essay.html index.html essay/sakuga1.jpg essay/sakuga2.jpg essay/study1.jpg essay/study2.jpg

--- a/essay.html
+++ b/essay.html
@@ -92,6 +92,7 @@
         <ul><span class="bar-title">目录</span>
             <li><span class="column-date">2026.1</span>
                 <ul>
+                    <li><a href="#note-8" onclick="highlightLink(this)">总之就是又开始学习了</a></li>
                     <li><a href="#note-7" onclick="highlightLink(this)">好用的ae插件</a></li>
                 </ul>
             </li>
@@ -131,12 +132,49 @@
                 </div>
             </div>
             <div class="note-content">
-            <p>文段</p>
+            <p></p>
             </div> 
             <div class="note-photo-container">
                 <img src=>
             </div>
         </div> -->
+
+        <div class="note" id="note-8">
+            <div class="note-header">
+                <div class="note-title">总之就是又开始学习了</div>
+                <div class="note-info">
+                    <div class="note-date">
+                        <span class="date-icon"></span>
+                        <span>2026年1月14日</span>
+                    </div>
+                    <div class="note-mood"></div>
+                    <div class="note-tags">
+                        <a href="#" class="note-tag">学习</a>
+                        <a href="#" class="note-tag">笔记</a>
+                    </div>
+                </div>
+            </div>
+            <div class="note-content">
+            <p>不知到为什么但第一个开始学的其实是物理……太糟糕了这科学得有点！</p>
+            <p>1:12p.m. 在写物理的间隙久违的动笔写了化学的期中卷，被治愈了，化学我们喜欢你</p>
+            <p>1:14p.m. 写作业 听歌</p>
+            <p>1:25p.m. 之前我是怎么上得下去学的啊，上学好累——TTTT</p>
+            <p>1:44p.m. 我得了一学习就想睡觉的病//继续写化学！！</p>
+            <p>1:48p.m. 已经不记得乙醇长什么样了[broken]</p>
+            <p>1:50p.m. 酚可以与氢氧化钠反应吗？艹又忘了</p>
+            <p>1:54p.m. Gemini说可以。</p>
+            <p>3:19p.m. 炸裂了，我怎么还得做作业，ughhhh</p>
+            <p>3:20p.m. 看点小说抚慰人心后就出发去图书馆写作业，顺便写点to-do list吧</p>
+            <p>5:05p.m. 抵达图书馆，常坐的座位没有人，嘿嘿开心</p>
+            <p>5:21p.m. 不想评价</p>
+            <p>5:49p.m. 我真服了，对面在哪电脑做什么激烈的运动，搞得整个桌子都在晃</p>
+            <p>10:06p.m. 嘿嘿回家了，开心。你问我为什么6:00之后就没吐槽了？哦，因为六点之后我就没有在写物理了。</p>
+            </div> 
+            <div class="note-photo-container">
+                <img src="./essay/study1.jpg">
+                <img src="./essay/study2.jpg">
+            </div>
+        </div>
 
         <div class="note" id="note-7">
             <div class="note-header">
@@ -161,9 +199,9 @@
             <p>应该算是ae庞杂的插件系统中功能简单且很好上手的一个了，而且占内存小所以很好带，可惜近期才发现。</p>
             <p>下次有时间吐槽一下bcc和particular这两个天天把我ae搞崩的罪魁祸首。</p>
             </div> 
-            <div class="note-photo-container">
-                <img src="https://files.catbox.moe/5cbxdk.png">
-                <img src="https://files.catbox.moe/6gb6c8.png">
+            <!-- <div class="note-photo-container">
+                <img src="./essay/sakuga1.jpg">
+                <img src="./essay/sakuga2.jpg"> -->
             </div>
         </div>
 
