--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     <div class="background"></div>
 
     <!-- 标题 -->
-     <div class="logo"><img src="https://files.catbox.moe/ea4haa.png" width="660"></div>
+     <div class="logo"><img src="./m/title.png" width="660"></div>
 
     <!-- 猫猫 -->
-    <div id="cat"><img src="https://files.catbox.moe/rkstbu.png" height="650"></div>
+    <div id="cat"><img src="./m/cat.png" height="650"></div>
     
     <!-- 导语 -->
     <p class="nar">你好～这里是Dream的个人网站<br>本站含有大量碎碎念和少量彩蛋<br>希望这堆杂七杂八的网页能给你提供一点有趣的东西<br>如果不能的话就把它当成一个人类观察样本吧</p>
@@ -121,12 +121,12 @@
         <li class="work-name">待开发</li>
      </ul>
 
-     <img src="https://files.catbox.moe/e8j1jo.png" id="button_red1">
-    <img src="https://files.catbox.moe/h2jlvn.png" id="button_green1">
-    <img src="https://files.catbox.moe/btjuxo.png" id="button_blue1">
-    <img src="https://files.catbox.moe/b49j93.png" id="button_red">
-    <img src="https://files.catbox.moe/8idh3a.png" id="button_green" onclick="randomRedirect()">
-    <img src="https://files.catbox.moe/phx2g1.png" id="button_blue">
+     <img src="./m/button-red1.png" id="button_red1">
+    <img src="./m/button-green1.png" id="button_green1">
+    <img src="./m/button-blue1.png" id="button_blue1">
+    <img src="./m/button-red.png" id="button_red">
+    <img src="./m/button-green.png" id="button_green" onclick="randomRedirect()">
+    <img src="./m/button-blue.png" id="button_blue">
 
     <script>
         function randomRedirect() {
