--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
     <!-- 近期更新 -->
     <ul class="update">近期更新
         <li>
+            <a href="essay.html#note-8">总之就是又开始学习了</a>
+            <span class="small">2025.12.25</span>
+        </li>
+        <li>
             <a href="essay.html#note-7">好用的ae插件</a>
             <span class="small">2026.1.7</span>
         </li>
         <li>
             <a href="recomendations.html#index-1">2025年值得一看的TV新作</a>
             <span class="small">2025.12.31</span>
-        </li>
-        <li>
-            <a href="gallery.html#memes">相册 > 无意义memes</a>
-            <span class="small">2025.12.25</span>
         </li>
     </ul>
 
