--- a/src collection.html
+++ b/src collection.html
@@ -216,6 +216,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-8">总之就是又开始学习了</a>
+                    <span class="small">2026.1.14</span>
+                </li>
+                <li>
                     <a href="essay.html#note-7">好用的ae插件</a>
                     <span class="small">2026.1.7</span>
                 </li>
@@ -230,10 +234,6 @@
                 <li>
                     <a href="essay.html#note-6">个人2025年度原画师</a>
                     <span class="small">2025.12.21</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-5">Some Interpretions on The Catcher in the Rye</a>
-                    <span class="small">2025.12.16</span>
                 </li>
             </ul>
         </div>
