essay.html gallery.html index.html recomendations.html src collection.html

--- a/essay.html
+++ b/essay.html
@@ -92,6 +92,7 @@
         <ul><span class="bar-title">目录</span>
             <li><span class="column-date">2026.1</span>
                 <ul>
+                    <li><a href="#note-8" onclick="highlightLink(this)">学习#d2</a></li>
                     <li><a href="#note-8" onclick="highlightLink(this)">总之就是又开始学习了</a></li>
                     <li><a href="#note-7" onclick="highlightLink(this)">好用的ae插件</a></li>
                 </ul>
@@ -138,6 +139,36 @@
                 <img src=>
             </div>
         </div> -->
+
+        <div class="note" id="note-9">
+            <div class="note-header">
+                <div class="note-title">学习#d2</div>
+                <div class="note-info">
+                    <div class="note-date">
+                        <span class="date-icon"></span>
+                        <span>2026年1月15日</span>
+                    </div>
+                    <div class="note-mood"></div>
+                    <div class="note-tags">
+                        <a href="#" class="note-tag">学习</a>
+                        <a href="#" class="note-tag">笔记</a>
+                    </div>
+                </div>
+            </div>
+            <div class="note-content">
+            <p>早上起来列了to-do list(finally)，但睡前发现一项也没完成。</p>
+            <p>上午上完物理课就和出去参加聚餐了。一桌三个家庭，每个家庭的孩子都需要心理医生，为什么会这样呢？又想起了<span class="work-name">《要有光》</span>中的<span class="work-name">京城篇</span>中的内容，当纪实文学真的变成触手可及的现实时反而会不再那么触目惊心。</p>
+            <p>下午和中午一起吃饭校友在圆明园的冰场划了冰再小逛了一会儿，看见了好多鸟和黑天鹅幼崽们（如p4）。我们是根据小红书上的帖子找过去的，去的时候发现比原帖少了一只小鹅，喂鹅的大姐证实了心中的猜疑：它死了。又是一条没能挨过冬季的生命。</p>
+            <p>晚上7:15到的图书馆，9:30左右就走了，物理作业都没写完，不想写了，撤！</p>
+            <p>学习的时候总觉得吃饭很耽误时间，所以中午很少去食堂吃饭，今天突然创新性地想到高三中午懒得吃饭可以喝安素，又方便又省时又营养全面，那些衡水模式的中学天天压缩吃饭时间到10分钟，不如每顿发400ml安素，边喝边学一点不耽误。</p>
+            </div> 
+            <div class="note-photo-container">
+                <img src="./essay/study3.jpg">
+                <img src="./essay/study4.jpg">
+                <img src="./essay/study5.jpg">
+                <img src="./essay/study6.jpg">
+            </div>
+        </div>
 
         <div class="note" id="note-8">
             <div class="note-header">
@@ -367,6 +398,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-9">学习#d2</a>
+                    <span class="small">2026.1.15</span>
+                </li>
+                <li>
                     <a href="essay.html#note-8">总之就是又开始学习了</a>
                     <span class="small">2026.1.14</span>
                 </li>
@@ -381,10 +416,6 @@
                 <li>
                     <a href="gallery.html#memes">相册 > 无意义memes</a>
                     <span class="small">2025.12.25</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-6">个人2025年度原画师</a>
-                    <span class="small">2025.12.21</span>
                 </li>
             </ul>
         </div>
