--- a/essay.html
+++ b/essay.html
@@ -164,7 +164,7 @@
             </div> 
             <div class="note-photo-container">
                 <img src="./essay/study3.jpg">
-                <img src="./essay/study4.jpg">
+                <img src="./essay/study4.jpg"><br>
                 <img src="./essay/study5.jpg">
                 <img src="./essay/study6.jpg">
             </div>
