--- a/essay.html
+++ b/essay.html
@@ -206,7 +206,7 @@
             </div>
         </div> -->
         
-        <div class="note" id="note-10">
+        <!-- <div class="note" id="note-10">
             <div class="note-header">
                 <div class="note-title">学习#d3</div>
                 <div class="note-info">
@@ -228,7 +228,7 @@
             <div class="note-photo-container">
                 <img src=>
             </div>
-        </div>
+        </div> -->
 
         <div class="note" id="note-9">
             <div class="note-header">
