--- a/essay.html
+++ b/essay.html
@@ -223,7 +223,7 @@
             </div>
             <div class="note-content">
             <p>早上5:33就醒了，辗转反侧到快8:00才爬起来补作业。今早我将奖励自己吃德南面包房的提拉米苏！每个早晨想吃面包/甜点却发现店家没开门/想吃的没出炉是最难受的。btw麦的枫糖松饼怎么下架了啊TT早晨吃点甜甜的热乎的东西真的会让人一天都开心的</p>
-            <p></p>
+            <p>在9:11把作业写完了，太成功了</p>
             </div> 
             <div class="note-photo-container">
                 <img src=>
@@ -254,7 +254,9 @@
             </div> 
             <div class="note-photo-container">
                 <img src="./essay/study3.jpg">
-                <img src="./essay/study4.jpg"><br>
+                <img src="./essay/study4.jpg">
+            </div>
+            <div class="note-photo-container">
                 <img src="./essay/study5.jpg">
                 <img src="./essay/study6.jpg">
             </div>
