--- a/essay.html
+++ b/essay.html
@@ -92,6 +92,7 @@
         <ul><span class="bar-title">目录</span>
             <li><span class="column-date">2026.1</span>
                 <ul>
+                    <li><a href="#note-10" onclick="highlightLink(this)">学习#d3</a></li>
                     <li><a href="#note-9" onclick="highlightLink(this)">学习#d2</a></li>
                     <li><a href="#note-8" onclick="highlightLink(this)">总之就是又开始学习了</a></li>
                     <li><a href="#note-7" onclick="highlightLink(this)">好用的ae插件</a></li>
@@ -206,7 +207,7 @@
             </div>
         </div> -->
         
-        <!-- <div class="note" id="note-10">
+        <div class="note" id="note-10">
             <div class="note-header">
                 <div class="note-title">学习#d3</div>
                 <div class="note-info">
@@ -222,13 +223,15 @@
                 </div>
             </div>
             <div class="note-content">
-            <p>早上5:33就醒了，辗转反侧到快8:00才爬起来补作业。今早我将奖励自己吃德南面包房的提拉米苏！每个早晨想吃面包/甜点却发现店家没开门/想吃的没出炉是最难受的。btw麦的枫糖松饼怎么下架了啊TT早晨吃点甜甜的热乎的东西真的会让人一天都开心的</p>
+            <p>早上5:33就醒了，辗转反侧到快8:00才爬起来补作业。今早我将奖励自己吃德南面包房的提拉米苏！酒味很香且浸润得足够充分，值得一吃。每个早晨想吃面包/甜点却发现店家没开门/想吃的没出炉是最难受的。btw麦的枫糖松饼怎么下架了啊TT早晨吃点甜甜的热乎的东西真的会让人一天都开心的</p>
             <p>在9:11把作业写完了，太成功了</p>
+            <p>下午3:00多到图书馆，一直在写摘抄，不想写理科了，干点不费脑子的活。忙起来很舒服。</p>
+            <p>明天休息。</p>
             </div> 
             <div class="note-photo-container">
-                <img src=>
+                <img src="./essay/study7.jpg">
             </div>
-        </div> -->
+        </div>
 
         <div class="note" id="note-9">
             <div class="note-header">
@@ -490,6 +493,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-10">学习#d3</a>
+                    <span class="small">2026.1.16</span>
+                </li>
+                <li>
                     <a href="essay.html#note-9">学习#d2</a>
                     <span class="small">2026.1.15</span>
                 </li>
@@ -504,10 +511,6 @@
                 <li>
                     <a href="recomendations.html#index-1">2025年值得一看的TV新作</a>
                     <span class="small">2025.12.31</span>
-                </li>
-                <li>
-                    <a href="gallery.html#memes">相册 > 无意义memes</a>
-                    <span class="small">2025.12.25</span>
                 </li>
             </ul>
         </div>
