--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
     <!-- 近期更新 -->
     <ul class="update">近期更新
         <li>
+            <a href="essay.html#note-10">学习#d3</a>
+            <span class="small">2026.1.16</span>
+        </li>
+        <li>
             <a href="essay.html#note-9">学习#d2</a>
             <span class="small">2026.1.15</span>
         </li>
         <li>
             <a href="essay.html#note-8">总之就是又开始学习了</a>
             <span class="small">2025.12.25</span>
-        </li>
-        <li>
-            <a href="essay.html#note-7">好用的ae插件</a>
-            <span class="small">2026.1.7</span>
         </li>
     </ul>
 
