--- a/gallery.html
+++ b/gallery.html
@@ -1045,6 +1045,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-11">学习#d4</a>
+                    <span class="small">2026.1.19</span>
+                </li>
+                <li>
                     <a href="essay.html#note-10">学习#d3</a>
                     <span class="small">2026.1.16</span>
                 </li>
@@ -1059,10 +1063,6 @@
                 <li>
                     <a href="essay.html#note-7">好用的ae插件</a>
                     <span class="small">2026.1.7</span>
-                </li>
-                <li>
-                    <a href="recomendations.html#index-1">2025年值得一看的TV新作</a>
-                    <span class="small">2025.12.31</span>
                 </li>
             </ul>
         </div>
