--- a/essay.html
+++ b/essay.html
@@ -292,7 +292,7 @@
             <div class="note-content">
             <p>不用参加期末考试到底是幸运还是失落呢。</p>
             <p>早晨起来赶作业，周末还是玩得太疯了。最近搬到朝阳这边住了，应该会开启一部分探店计划，主要是集中在望京吧。</p>
-            <p>来到朝阳的第一件事就是早上点小面包的外卖，出品果然可靠<i class="fas fa-face-sad-cry"></p>
+            <p>来到朝阳的第一件事就是早上点小面包的外卖，出品果然可靠<i class="fas fa-face-sad-cry"></i></p>
             <p>9页物理题做了近3个小时，认真分析了一下还是建模不够熟练，该刷题。</p>
             <p>今天的物理作业有13页，还得写高三刚考完的语文卷，要死人了啊啊啊啊</p>
             <p>每当要做的事太多时就会想拼死命，对于习惯性认真做事的人来讲，不努力也是一件很难的事。改变思维方式很难，但能改变思维方式的人很nb，拼死命做事谁都会，那只是条捷径，我只是在逃避，选择那条更简单的路。<a href="https://bgm.tv/subject/147068" class="work-name">三月的狮子</a>中香子指着比自己更成功的“外来者”零说：“努力难道不也是一种天赋吗”，当时好像有什么击中了我，但现在我又mygo了。</p>
