src collection.html

--- a/src collection.html
+++ b/src collection.html
@@ -156,7 +156,7 @@
                     <a href="https://www.pinterest.com/" target="_blank">Pinterest</a>
                     <a href="https://www.lookae.com/" target="_blank">剪辑素材</a>
                     <a href="https://www.pexels.com/" target="_blank">免费图片素材</a>
-                    <a href=""></a>
+                    <a href="https://z-library.ec/">z-library</a>
                     <a href=""></a>
                     <a href=""></a>
                     <a href=""></a>
