essay.html gallery.html index.html recomendations.html src collection.html

--- a/essay.html
+++ b/essay.html
@@ -92,6 +92,7 @@
         <ul><span class="bar-title">目录</span>
             <li><span class="column-date">2026.1</span>
                 <ul>
+                    <li><a href="#note-12" onclick="highlightLink(this)">abt《献给阿尔吉侬的花束》</a></li>
                     <li><a href="#note-11" onclick="highlightLink(this)">学习#d4</a></li>
                     <li><a href="#note-10" onclick="highlightLink(this)">学习#d3</a></li>
                     <li><a href="#note-9" onclick="highlightLink(this)">学习#d2</a></li>
@@ -252,27 +253,30 @@
             </div>
         </div> -->
         
-        <!-- <div class="note" id="note-">
+        <div class="note" id="note-12">
             <div class="note-header">
-                <div class="note-title">标题</div>
+                <div class="note-title">abt《献给阿尔吉侬的花束》</div>
                 <div class="note-info">
                     <div class="note-date">
                         <span class="date-icon"></span>
-                        <span>日期</span>
+                        <span>2026.1.30</span>
                     </div>
-                    <div class="note-mood">心情</div>
+                    <div class="note-mood"><i class="fas fa-face-sad-cry"></i></div>
                     <div class="note-tags">
-                        <a href="#" class="note-tag">标签</a>
+                        <a href="#" class="note-tag">阅读</a>
+                        <a href="#" class="note-tag">泪目了</a>
                     </div>
                 </div>
             </div>
             <div class="note-content">
-            <p></p>
+            <p>果然好哭。心理压抑但又哭不出来的时候就需要这种催化剂来释放压力。</p>
+            <p>从查理回去看他妈妈那段我就想哭，可惜眼泪已经流干了所以只能纯心痛。之前他发现手术在提高智商的同时会带来心智发展滞后的问题，但退化的倒计时又碾着他去在依旧高智商的时候去向家人展示这一面，去挖掘自己的童年经历。这个过程在某种程度上促进了他的心智成熟，他拥有了作为一个人而言的有关家庭的情感体验。<br>但也会想，如果你的家庭只会在你是一个正常人的情况下接纳你，那以正常人身份的和解总是别扭的、缺乏信任感的。<br><span class="quotes">“这些年的梦魇已经够痛苦了，我只想看到她微笑，并知道我才是能让她快乐的人。在我的生命中，我第一次让她的嘴唇绽开笑容。”</span><br><span class="quotes">“我要你留下一份报告，这样你就可以告诉别人，你儿子其实不是笨蛋。”</span><br>童年的受虐经历致使查理以一种卑微地姿态恳求接纳。（这是否可以与他对会场中的科学家的傲慢做对比……？）然而对方什么也不记得了。那些萦绕在你睡梦中多年的噩梦早已变成对方茶余饭后的闲聊话题，只有母亲举起刀时的应激反应留存着过去存在过的痕迹，但妹妹说她疯了。到最后你发现，你所怨恨的只是一个空对象，你只能释然了，你被迫释然了。</p>
+            <p>查理智力退化的那一段终于是让我心痛到挤出眼泪了，从进步报告里出现第一个错别字开始我就蚌埠住了。莫名的非常能共情这种眼睁睁看着自己丧失学习能力的无力感。<br><span class="quotes">“拜托……拜托不……不要让我忘记怎么读和写……”</span><br>为什么面包店的人在查理变会白痴后又将他当朋友了呢？不再是捉弄嘲笑，而是真心实意的朋友。<br><span class="quotes">“还有：如果你有机会请放一些花在后院的阿尔吉侬坟上。”</span><br>给阿尔吉侬献花吧，它已经从迷宫中逃出去了。</p>
             </div> 
             <div class="note-photo-container">
                 <img src=>
             </div>
-        </div> -->
+        </div>
         
         <div class="note" id="note-11">
             <div class="note-header">
@@ -592,6 +596,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-12">abt《献给阿尔吉侬的花束》</a>
+                    <span class="small">2026.1.30</span>
+                </li>
+                <li>
                     <a href="essay.html#note-11">学习#d4</a>
                     <span class="small">2026.1.19</span>
                 </li>
@@ -606,10 +614,6 @@
                 <li>
                     <a href="essay.html#note-8">总之就是又开始学习了</a>
                     <span class="small">2026.1.14</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-7">好用的ae插件</a>
-                    <span class="small">2026.1.7</span>
                 </li>
             </ul>
         </div>
