--- a/recomendations.html
+++ b/recomendations.html
@@ -347,6 +347,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-12">abt《献给阿尔吉侬的花束》</a>
+                    <span class="small">2026.1.30</span>
+                </li>
+                <li>
                     <a href="essay.html#note-11">学习#d4</a>
                     <span class="small">2026.1.19</span>
                 </li>
@@ -361,10 +365,6 @@
                 <li>
                     <a href="essay.html#note-8">总之就是又开始学习了</a>
                     <span class="small">2026.1.14</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-7">好用的ae插件</a>
-                    <span class="small">2026.1.7</span>
                 </li>
             </ul>
         </div>
