--- a/essay.html
+++ b/essay.html
@@ -275,7 +275,8 @@
             <p class="quotes">“这些年的梦魇已经够痛苦了，我只想看到她微笑，并知道我才是能让她快乐的人。在我的生命中，我第一次让她的嘴唇绽开笑容。”</p>
             <p class="quotes">“我要你留下一份报告，这样你就可以告诉别人，你儿子其实不是笨蛋。”</p>
             <p>童年的受虐经历致使查理以一种卑微地姿态恳求接纳。（这是否可以与他对会场中的科学家的傲慢做对比……？）然而对方什么也不记得了。那些萦绕在你睡梦中多年的噩梦早已变成对方茶余饭后的闲聊话题，只有母亲举起刀时的应激反应留存着过去存在过的痕迹，但妹妹说她疯了。到最后你发现，你所怨恨的只是一个空对象，你只能释然了，你被迫释然了。</p>
-            <p>查理智力退化的那一段终于是让我心痛到挤出眼泪了，从进步报告里出现第一个错别字开始我就蚌埠住了。莫名的非常能共情这种眼睁睁看着自己丧失学习能力的无力感。<br><span class="quotes">“拜托……拜托不……不要让我忘记怎么读和写……”</span></p>
+            <p>查理智力退化的那一段终于是让我心痛到挤出眼泪了，从进步报告里出现第一个错别字开始我就蚌埠住了。莫名的非常能共情这种眼睁睁看着自己丧失学习能力的无力感。</p>
+            <p class="quotes">“拜托……拜托不……不要让我忘记怎么读和写……”</p>
             <p>为什么面包店的人在查理变会白痴后又将他当朋友了呢？不再是捉弄嘲笑，而是真心实意的朋友。</p>
             <p class="quotes">“还有：如果你有机会请放一些花在后院的阿尔吉侬坟上。”</p><br>给阿尔吉侬献花吧，它已经从迷宫中逃出去了。</p>
             </div> 
