essay.html gallery.html index.html recomendations.html src collection.html

--- a/src collection.html
+++ b/src collection.html
@@ -216,7 +216,7 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
-                    <a href="essay.html#note-12">abt《献给阿尔吉侬的花束》</a>
+                    <a href="essay.html#note-12">abt献给阿尔吉侬的花束</a>
                     <span class="small">2026.1.30</span>
                 </li>
                 <li>
