--- a/essay.html
+++ b/essay.html
@@ -255,7 +255,7 @@
         
         <div class="note" id="note-12">
             <div class="note-header">
-                <div class="note-title">abt《献给阿尔吉侬的花束》</div>
+                <div class="note-title">abt献给阿尔吉侬的花束</div>
                 <div class="note-info">
                     <div class="note-date">
                         <span class="date-icon"></span>
@@ -603,7 +603,7 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
-                    <a href="essay.html#note-12">abt《献给阿尔吉侬的花束》</a>
+                    <a href="essay.html#note-12">abt献给阿尔吉侬的花束</a>
                     <span class="small">2026.1.30</span>
                 </li>
                 <li>
