--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- 近期更新 -->
     <ul class="update">近期更新
         <li>
-            <a href="essay.html#note-12">abt《献给阿尔吉侬的花束》</a>
+            <a href="essay.html#note-12">abt献给阿尔吉侬的花束</a>
             <span class="small">2026.1.30</span>
         </li>
         <li>
