--- a/essay.html
+++ b/essay.html
@@ -92,7 +92,7 @@
         <ul><span class="bar-title">目录</span>
             <li><span class="column-date">2026.1</span>
                 <ul>
-                    <li><a href="#note-12" onclick="highlightLink(this)">abt《献给阿尔吉侬的花束》</a></li>
+                    <li><a href="#note-12" onclick="highlightLink(this)">abt献给阿尔吉侬的花束</a></li>
                     <li><a href="#note-11" onclick="highlightLink(this)">学习#d4</a></li>
                     <li><a href="#note-10" onclick="highlightLink(this)">学习#d3</a></li>
                     <li><a href="#note-9" onclick="highlightLink(this)">学习#d2</a></li>
